plugins {
    id 'org.jetbrains.grammarkit' version '2021.1.3'
    id 'org.jetbrains.intellij' version '1.5.2'
    id 'com.github.ManifestClasspath' version '0.1.0-RELEASE'
    id 'org.jetbrains.changelog' version '1.3.1'
}

apply plugin: 'org.jetbrains.grammarkit'
apply plugin: 'java'
apply plugin: 'org.jetbrains.changelog'

group 'com.tobszarny.intellij.plugin'
version pluginVersion

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = platformVersion
    updateSinceUntilBuild = false
    plugins = ['IntelliLang', 'java']
    ideaDependencyCachePath = project.buildDir.absolutePath
    updateSinceUntilBuild = false
    sandboxDirectory = '~/intellijSandbox'
}


patchPluginXml {
    dependsOn 'patchLicense'
    sinceBuild = platformSinceBuild

    changeNotes = """
            <p><h2>New in $pluginVersion</h2></p>
            <p>
            ${changelog.get(pluginVersion.toString()).toHTML()}
            </p>
            <br />
            <p>See the <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/blob/master//CHANGELOG.md">CHANGELOG</a> for more details and history.</p>
        """.stripIndent()
}

buildSearchableOptions {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

tasks.register('patchLicense', Copy) {
    from 'LICENSE.md.template'
    into './'
    filter { String line ->
        {
            println line
            var newline = line.contains('{yyyy}') ? line.replace('{yyyy}', '(c) ' + new Date().format('yyyy')) : line
            newline = newline.contains('{name of copyright owner}') ? newline.replace('{name of copyright owner}', pluginAuthor) : line

            return newline
        }
    }
    rename '.+', 'LICENSE.md'
}

runPluginVerifier {
    ideVersions = ['IU-2022.2']
}

test {
    useJUnitPlatform()
}
